<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E7FE7"
    tools:context=".FirstParentReg">

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/progress_bar2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Welcome to KIDI"
            android:textColor="#070101"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem ipsom dollar sit map"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="341dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_background"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_weight="3"
                android:background="@drawable/arrow"
                android:popupBackground="@drawable/text_background" />

            <EditText
                android:id="@+id/editTextPhone2"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />


        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_background"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="Back"
                tools:layout_editor_absoluteY="683dp" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="Next"
                tools:layout_editor_absoluteY="708dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>